# chess

./: README.md  chess_stats_draft.ipynb  chessboard.ipynb
chess-puzzle/: conda_env.yml  pyproject.toml
chess-puzzle/chess_puzzle/: chessboard.ipynb  find_puzzles.py  find_puzzles3.py
chess-puzzle/tests/: test_chess_puzzle.py
