[tool.poetry]
name = "chess-puzzle"
version = "0.1.0"
description = ""
authors = ["bcarvalho <bcarvalho@viascience.com>"]

[tool.poetry.dependencies]
python = "^3.9"
python-chess = "^1.999"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
